Updated API Docs
